--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -17,5 +17,5 @@
     border-radius: 100%;
     cursor: pointer;
     user-select: none;
-    transition: background-color .75s;
+    transition: background-color 0.75s;
 }
